# QNdiKit

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE_NDI.txt  NOTICE_QT.txt  README.md  build.bat  build.sh  build_all.bat  build_all.sh  install.bat  install.sh
cmake/: FindQNdiKit.cmake  QNdiKit.pc.in  QNdiKitConfig.cmake.in  findndi.cmake
docs/: README_zh.md
examples/: CMakeLists.txt
examples/external_project_example/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
examples/quick/manager_demo/: CMakeLists.txt  main.cpp  main.qml
examples/quick/manager_demo/Ctrl/: CtrlRegister.h  NdiSourceInfoController.cpp  NdiSourceInfoController.h
examples/quick/manager_demo/Model/: NdiSourceInfoModel.cpp  NdiSourceInfoModel.h
examples/quick/manager_demo/View/: main.qml
examples/quick/source_demo/: CMakeLists.txt  main.cpp  main.qml
examples/widgets/manager_demo/: CMakeLists.txt  main.cpp
examples/widgets/ndi_manager/: CMakeLists.txt  main.cpp  mainwindow.cpp
examples/widgets/ndi_source/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
examples/widgets/source_demo/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/manager/: CMakeLists.txt
src/manager/core/: CMakeLists.txt  qndikitconnection.cpp  qndikitdiscovery.cpp  qndikitdiscovery.h  qndikitmanager.cpp  qndikitmanager.h  qndikitmanager_global.h  qndikitmanagercore.cpp  qndikitmanagercore.h
src/manager/qml/: CMakeLists.txt  qndikitdiscoveryquickitem.cpp  qndikitdiscoveryquickitem.h  qndikitmanagerquickitem.cpp  qndikitmanagerquickitem.h  qndikitmanagerquickview.cpp  qndikitmanagerquickview.h
src/manager/widgets/: CMakeLists.txt  qndikitdiscoverywidget.cpp  qndikitdiscoverywidget.h  qndikitmanagercontrol.cpp  qndikitmanagercontrol.h  qndikitmanagerwidget.cpp  qndikitmanagerwidget.h
src/ndi_manager/: CMakeLists.txt
src/ndi_manager/core/: CMakeLists.txt  ManagerCoreRegister.h  QNDI.Manager.CoreRegister.h  QNDI.Manager.GlobalController.cpp  QNDI.Manager.GlobalController.h  QNDI.manager.core.cpp  QNDI.manager.core.h  findndisourceworker.cpp  findndisourceworker.h  ndicpuworker.cpp  ndicpuworker.h  ndigeneralcontroller.cpp  ndigeneralcontroller.h  ndimanagerevent.cpp  ndimanagerevent.h  ndireceiveworker.cpp  ndireceiveworker.h  qndimanagercore.cpp  qndimanagercore.h  qndimanagercore_global.h
src/ndi_manager/quick/: CMakeLists.txt  QNDI.Manager.QuickRegister.h  ndivieweritem.cpp  ndivieweritem.h  qndimanagerquick_global.h  qndimanagerquickitem.cpp  qndimanagerquickitem.h  quickviewregister.h
src/ndi_manager/widgets/: CMakeLists.txt  qndimanagerwidget.cpp  qndimanagerwidget.h  qndimanagerwidgets_global.h
src/ndi_source/: CMakeLists.txt
src/ndi_source/core/: CMakeLists.txt  qndisourcecore.cpp  qndisourcecore.h  qndisourcecore_global.h
src/ndi_source/quick/: CMakeLists.txt  qndisourcequick_global.h  qndisourcequickitem.cpp  qndisourcequickitem.h
src/ndi_source/widgets/: CMakeLists.txt  qndisourcewidget.cpp  qndisourcewidget.h  qndisourcewidgets_global.h
src/source/: CMakeLists.txt
src/source/core/: CMakeLists.txt  qndikitsource.cpp  qndikitsource.h  qndikitsource_global.h  qndikitsourcecore.cpp  qndikitsourcecore.h  qndikitsourcefactory.cpp  qndikitsourcefactory.h
src/source/qml/: CMakeLists.txt  qndikitsourcequickitem.cpp  qndikitsourcequickitem.h  qndikitsourcequickmanager.cpp  qndikitsourcequickmanager.h  qndikitsourcequickview.cpp  qndikitsourcequickview.h
src/source/widgets/: CMakeLists.txt  dummy.cpp  dummy.h  qndikitsourcecontrol.cpp  qndikitsourcecontrol.h  qndikitsourceviewer.cpp  qndikitsourceviewer.h  qndikitsourcewidget.cpp  qndikitsourcewidget.h
